--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "cryptocompare": "^1.0.0",
     "fuzzy": "^0.1.3",
+    "highcharts": "^10.0.0",
+    "highcharts-react-official": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highcharts": "^16.1.0",
+    "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
